# etl-pipeline

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: logging.yaml  settings.yaml
scripts/: generate_csv.py
sql/: init.sql
src/etl/: config.py  logging_setup.py  main.py  models.py  watermark.py
src/etl/extract/: api_client.py  db_reader.py  file_reader.py
src/etl/load/: postgres_copy.py  postgres_upsert.py
src/etl/transform/: core.py
